Update Swagger Yaml
